--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install mkdocs
+          python3 -m pip install mkdocs-bootswatch
       
       - name: Build Docs
         run: mkdocs build
