--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,7 @@ jobs:
   gh-pages:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout Repository: ${{ GITHUB_WORKSPACE }}'
+      - name: 'Checkout Repository: CICERO'
         uses: actions/checkout@v2
       
       - name: Setup Python
